--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "upload-videos": "ts-node prisma/upload-videos.ts"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "@nestjs/serve-static": "^5.0.4",
     "@prisma/client": "^5.22.0",
     "@types/fluent-ffmpeg": "^2.1.28",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -37,7 +39,8 @@
     "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "sharp": "^0.34.5"
   },
   "optionalDependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
