feat: notification system improvements and seed script
- Added welcome notifications for new users (3 notifications)
- Created separate notification seed script
- Fixed notification links to use specific course IDs
- Enabled free course rating and commenting
- Removed mock teacher ratings
- Updated comment creation to support FormData with images
- Fixed 401 redirect to skip OTP verify-code endpoint

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "seed": "ts-node prisma/seed.ts",
+    "seed:notifications": "ts-node prisma/seed-notifications.ts",
     "upload-videos": "ts-node prisma/upload-videos.ts"
   },
   "keywords": [],
