--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdfkit": "^0.17.2",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "sharp": "^0.34.5"
   },
   "optionalDependencies": {
